--- a/style.css
+++ b/style.css
@@ -1,8 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+
+
 *{ 
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    color: white;
+   
 }
+
+:root{
+    --corBotoesH2Texto: #ffae00 ;
+    --arredondamentobordas: 10px;
+    --minhafonte:  "Prompt", sans-serif;
+
+}
+
+
 
 body{
     background-image: url(baseProjetoCardapio/imagens/bg.png);
@@ -10,6 +26,7 @@ body{
 /* descomente para aplicar uma imagem sem repetição */
 /* background-repeat:no repeat;
 background-size:cover */
+text-align: center;
 }
 
 header{
@@ -21,4 +38,64 @@ nav a{
     color: white;
     margin: 0px 10px;
     text-decoration:none;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: var(--minhafonte);
 }
+
+.logo {
+    width: 250px;
+}
+
+h1{ text-transform: uppercase;
+
+
+}
+
+
+
+h2{ 
+    color: var(--corBotoesH2Texto);
+    text-align: center;
+}
+
+.imagemProduto{
+    width: 400px;
+}
+
+
+
+
+.boxProduto{
+    background-color: rgba(37, 37, 37, 0.8); 
+    width: 850px;
+    margin: auto;
+    border-radius: var(--arredondamentobordas);
+}
+
+.boxImg , .boxTexto{
+display: inline-block;
+vertical-align: middle;
+
+}
+
+.boxTexto{ 
+ width: 400px;
+ text-align: start;
+}
+
+h1,h2,h3, button {
+    margin: 10px 0px;
+}
+
+button{
+    background-color: #ffae00 ;
+    padding: 15px; ;
+    border: none;
+    border-radius: var(--arredondamentobordas);
+    width: 150px;
+    cursor: pointer;
+}
+
+
+
