--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ nav a{
     margin: 0px 10px;
     text-decoration:none;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: none;
     font-family: var(--minhafonte);
 }
 
@@ -96,6 +96,8 @@ button{
     width: 150px;
     cursor: pointer;
 }
+
+
 
 
 
